# database-qt-gui-cpp

./: CMakeLists.txt  descr.md  tasks.md
res/: generateRes.sh  resList.qrc  resList.rcc
src/: generateAllDesigns.sh  main.cpp
src/Database/: Auto-odb.cxx  Auto-odb.hxx  Auto-odb.ixx  Auto.cpp  Auto.hpp  Auto.sql  CMakeLists.txt  DatabaseConnection.cpp  DatabaseConnection.hpp  DbApi.cpp  DbApi.hpp  JournalRow-odb.cxx  JournalRow-odb.hxx  JournalRow-odb.ixx  JournalRow.cpp  JournalRow.hpp  JournalRow.sql  Person-odb.cxx  Person-odb.hxx  Person-odb.ixx  Person.cpp  Person.hpp  Person.sql  Route-odb.cxx  Route-odb.hxx  Route-odb.ixx  Route.cpp  Route.hpp  Route.sql  generateODBFiles.sh
src/MainWindow/: MainWindow.cpp  MainWindow.hpp  UiMainWindow.hpp  Utils.cpp  Utils.hpp  generateUi.sh  mainwindow.ui
src/MainWindow/Auto/: AddAutoDialog.cpp  AddAutoDialog.hpp  AutoTab.cpp  AutoTab.hpp  RemoveAutoDialog.cpp  RemoveAutoDialog.hpp  UiAddAutoDialog.hpp  UiRemoveAutoDialog.hpp  addAutoDialog.ui  generateUi.sh  removeAutoDialog.ui
src/MainWindow/Journal/: AddJournalRowDialog.cpp  AddJournalRowDialog.hpp  JournalTab.cpp  JournalTab.hpp  RemoveJournalRowDialog.cpp  RemoveJournalRowDialog.hpp  UiAddJournalRowDialog.hpp  UiRemoveJournalRowDialog.hpp  addJournalRowDialog.ui  generateUi.sh  removeJournalRowDialog.ui
src/MainWindow/Person/: AddPersonDialog.cpp  AddPersonDialog.hpp  PersonTab.cpp  PersonTab.hpp  RemovePersonDialog.cpp  RemovePersonDialog.hpp  UiAddPersonDialog.hpp  UiRemovePersonDialog.hpp  addPersonDialog.ui  generateUi.sh
src/MainWindow/Route/: AddRouteDialog.cpp  AddRouteDialog.hpp  RemoveRouteDialog.cpp  RemoveRouteDialog.hpp  RouteTab.cpp  RouteTab.hpp  UiAddRouteDialog.hpp  UiRemoveRouteDialog.hpp  addRouteDialog.ui  generateUi.sh  removeRouteDialog.ui
src/MainWindow/Settings/: SettingsDialog.cpp  SettingsDialog.hpp  UiSettings.hpp  generateUi.sh  settings.ui
src/MainWindow/Tabs/: AutoTab.cpp  AutoTab.hpp  JournalTab.cpp  JournalTab.hpp  PersonTab.cpp  RouteTab.cpp  RouteTab.hpp
src/Settings/: Settings.cpp  Settings.hpp
